<resources>
    <string name="app_name">泰客猫</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="operator_login">操作员登录</string>
    <string name="operator_login_name">输入用户名</string>
    <string name="operator_login_psw">输入密码</string>
    <string name="operator_login_comfirm">确定</string>
    <string name="operator_change">操作员修改</string>
    <string name="master_change">主管理修改</string>
    <string name="home_page">首页</string>
    <string name="cashier">收银台</string>
    <string name="appstroe">应用市场</string>
    <string name="myapps">我的应用</string>
    <string name="T_account">T账户</string>
    <string name="data_report">数据报表</string>
    <string name="pay_password_txt">请输入交易密码</string>
    <string name="sale_txt">消费</string>
    <string name="sale_undo">消费撤销</string>
    <string name="sale_refund">退货</string>
    <string name="change_pass">修改密码</string>
    <string name="ic_public_download">IC公钥下载</string>
    <string name="trans_record">交易记录</string>
    <string name="login">签到</string>
    <string name="sale_manager">消费管理</string>
    <string name="sale_Info">信息展示</string>
    <string name="get_info">信息获取</string>
    <string name="mechant_login">商户签到</string>
    <string name="unmember_login">非会员签到</string>
    <string name="getInfo">注意：该功能会重新获取后台所有信息，请谨慎操作。</string>
    <string name="member_login">会员签到</string>
    <string name="unmember_masterkey">非会员主密钥</string>
    <string name="member_masterkey">会员主密钥</string>
    <string name="down_masterkey">下载主密钥</string>
    <string name="member_settle">会员结算</string>
    <string name="settle">结算</string>
    <string name="unmember_settle">非会员结算</string>
    <string name="download_capk">下载公钥参数</string>
    <string name="download_aid">下载AID参数</string>
    <string name="mechant_info">商户信息</string>
    <string name="mechant_name">商户名：</string>
    <string name="terminal_name">终端名：</string>
    <string name="ksn">KSN号：</string>
    <string name="terminalNo">终端号：</string>
    <string name="terminal_id">设备号：</string>
    <string name="activate_code">BAT激活码: </string>
    <string name="vendor_id">BAT商户ID：</string>
    <string name="vendor_key">BAT商户KEY：</string>
    <string name="subject">交易简介：</string>
    <string name="description">交易详情：</string>
    <string name="member_authcode">会员授权码：</string>
    <string name="unmember_authcode">非会员授权码：</string>
    <string name="unmember_menchant_no">非会员商户号：</string>
    <string name="member_menchant_no">会员商户号：</string>
    <string name="unmember_tid_no">非会员终端号：</string>
    <string name="member_tid_no">会员终端号：</string>
    <string name="ip">支付IP：</string>
    <string name="port">支付port：</string>
    <string name="tpdu">支付tpdu：</string>
    <string name="change_info">修改信息</string>
    <string name="comfirm_info">修改信息</string>
    <string name="huishi">华势收单:</string>
    <string name="other_info">其他信息:</string>
    <string name="BAT">BAT收单：</string>


    <string name="pay_data">本次消费</string>
    <string name="pay_order_id">订单编号：</string>
    <string name="pay_amount_total">消费总额：</string>
    <string name="pay_order_amount">订单金额：</string>
    <string name="pay_point_amount">积分抵扣：</string>
    <string name="pay_coupons_amount">优惠券抵扣：</string>
    <string name="pay_amount">支付金额：</string>
    <string name="pay_type">支付方式</string>
    <string name="pay_flot">刷卡</string>
    <string name="pay_cash">现金</string>
    <string name="pay_aly">支付宝</string>
    <string name="pay_wx">微信</string>
    <string name="pay_bd">百度</string>
    <string name="pay_qb">钱包</string>
    <string name="pay_stk">会员卡</string>
    <string name="pay_end_des">您好，本次交易结束</string>
    <string name="pay_query">交易异常，点击查询该笔订单</string>
    <string name="pay_des">支付金额为0元，请直接确定</string>
    <string name="print_again">重新打印</string>
    <string name="pay_end">交易完成</string>
    <string name="pay_order_query">末笔查询</string>
    <string name="payCash">现金收款</string>
    <string name="totalAmount">应收金额:</string>
    <string name="receivedAmount">实收金额:</string>
    <string name="oddChange">找零金额:</string>
    <string name="record_amount">金额:  </string>
    <string name="trans_time">交易时间:  </string>
    <string name="record">交易记录</string>
    <string name="no_record">无交易记录</string>
    <string name="line"></string>
    <string name="merchantNo">商户号：</string>
    <string name="licenseNo">营业执照：</string>
    <string name="accountName">收款账户：</string>
    <string name="accountBank">收款银行：</string>
    <string name="accountNo">收款账号：</string>
    <string name="activateCode">激活码：</string>
    <string name="smTerminal">扫码终端号：</string>
    <string name="smMerchantNo">扫码商户号：</string>
    <string name="smMerchantName">扫码商户名称：</string>
    <string name="domain">域名：</string>
    <string name="auth_code">授权码：</string>
    <string name="memberNo">请输入手机号或会员卡号</string>
    <string name="tips">温馨提示</string>
    <string name="analyze_fail">抱歉，未在图中发现号码！</string>
    <string name="sure">确定</string>
    <string name="memberInfo">会员信息</string>
    <string name="record_info">交易详情</string>
    <string name="richer_e_qb">富人e钱包</string>

    <string name="setter_params">参数设置</string>
    <string name="terminal">终端号</string>
    <string name="merchant">商户号</string>


    <string-array name="degrees">
        <item>请选择</item>
        <item>10s钟</item>
        <item>20s钟</item>
        <item>30s钟</item>
        <item>60s钟</item>
    </string-array>
</resources>
