<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="@dimen/font_size_20"
        android:text="@string/setter_params" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/font_size_20"
            android:text="@string/terminal" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/font_size_20"
            android:layout_marginRight="@dimen/font_size_20"
            android:layout_weight="1"
            android:maxLength="8"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:layout_weight="1"
            android:text="@string/merchant" />

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/font_size_20"
            android:layout_marginRight="@dimen/font_size_20"
            android:layout_weight="1"

            android:maxLength="15"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:layout_weight="1"
            android:text="IP" />

        <com.zfsbs.activity.liandong.IPEdit
            android:id="@+id/EditText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/font_size_20"
            android:layout_marginRight="@dimen/font_size_20"
            android:inputType="number"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:layout_weight="1"
            android:text="Port" />

        <EditText
            android:id="@+id/EditText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/font_size_20"
            android:layout_marginRight="@dimen/font_size_20"
            android:layout_weight="1"
            android:inputType="number"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/id_Ok"
        android:visibility="invisible"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/font_size_20"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@drawable/btn_bg_press"
        android:text="下一步" />

</LinearLayout>